# rebecca-chatbots

./: .env.example  .gitignore  ONLINE_SETUP_FOR_SISTER.md  README.md  config.yaml  pyproject.toml
backend/app/: __init__.py  adapters.py  config.py  controller.py  database.py  influence.py  main.py  models.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: ConversationFeed.tsx  FragmentInput.tsx  OperatorPanel.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts
llm_kiosk_installation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dev.sh  kiosk.sh
tests/: test_adapters.py  test_config.py  test_controller.py  test_influence.py
